# crewai-test

./: pyproject-old.toml  pyproject.toml
src/game_builder_crew/: crew.py  main.py
src/game_builder_crew/config/: agents.yaml  tasks.yaml
src/game_builder_crew/services/: Calendar.py  Messaging.py  __init__.py
src/game_builder_crew/shared/: __init__.py  models.py
src/game_builder_crew/utils/: __init__.py  schedule_generator.py
