[project]
name = "game-builder-crew"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "crewai>=0.193.0",
    "python-dotenv==1.0.0",
]

[project.scripts]
run_crew = "game_builder_crew.main:run"
train = "game_builder_crew.main:train"
plot = "game_builder_crew.main:plot"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
